07-Demo-Application/kubernetes-manifests/06-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: kube-demo-app
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # NOTE: You need to replace this with your own public image
          # Or use a pre-built one for the demo.
          image: "ajmalrasouli/kube-demo-app:v2"
          ports:
            - containerPort: 5000
