07-Demo-Application/kubernetes-manifests/04-database-service.yaml
# Corrected version of 04-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: kube-demo-app
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
